# mja

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: index.html  main.ts  settings.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
