[package]
name = "mja"
version = "0.5.0"
description = "MJA - midjourney automator"
authors = ["Aleksander Dumala"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["dialog-open", "process-command-api", "shell-open", "shell-sidecar"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
once_cell = "1.8.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
rand = "0.8.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
